# pivi

./: .gitignore  README.md  index.html  package-lock.json  package.json  release-share.sh  tsconfig.json  vite.config.ts
.github/workflows/: github-release.yml  release-windows.yml  windows-build.yml
design/: pivi.html
spec/: index.md
spec/00-overview/: constraints-non-goals.md  product-goals.md
spec/01-architecture/: networking-nat-strategy.md  system-architecture.md
spec/02-realtime-media/: webrtc-media-design.md
spec/03-client/: desktop-app-design.md
spec/04-host-runtime/: host-runtime-design.md
spec/05-security/: security-model.md
spec/06-delivery/: README.md  changelog.md  macos-build.md  project-tracker.md  roadmap-mvp.md  windows-build.md
spec/07-product-design/: channel-prd.md  demo-channel.html  demo-settings.html  detailed-prd.md  settings-prd.md
spec/08-technical-design/: audio-routing.md  datachannel-transfer.md  detailed-tech-design.md  host-migration-security.md  hotkeys-global.md  invite-shortcode.md  signaling-webrtc.md  windows-first-runtime-interop.md
spec/09-testing/: test-cross-platform-runtime.md  test-datachannel.md  test-host-runtime.md  (+4 more)
src/: App.css  App.tsx  providers.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  control_runtime.rs  discovery.rs  endpoint_probe.rs  host_migration.rs  host_runtime_session.rs  hotkeys.rs  invite_code.rs  lib.rs  main.rs  nat_mapping.rs  room_broadcast.rs  room_preparation.rs  room_state.rs  signaling.rs  webrtc_router.rs  ws_server.rs
(+45 files in other folders)
