[package]
name = "pivi"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pivi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
# Offline-capable local IPv4 detection: enumerates network interfaces instead
# of relying on a route to a public address (8.8.8.8), so room creation works
# on a LAN with no internet route.
if-addrs = "0.7"
# WebSocket server for the control-plane event push channel (C1): a persistent
# connection per joiner replaces the 1s TCP polling for room events.
tungstenite = "0.24"

[target.'cfg(not(target_os = "windows"))'.dependencies]
portmapper = "0.15.0"
